--- a/test-scss/courses.html
+++ b/test-scss/courses.html
@@ -156,33 +156,87 @@
 
         </div>
         <div class="d-flex justify-content-between flex-wrap center filter__block collapse mt-3" id="demo">
-            <div class="search-input-parent col-12 col-sm-6 col-md-3 pl-0 pr-0 pr-sm-2 mt-3">
-                <input class="search-input w-100" type="text">
+            <div class="col-12 col-sm-6 col-md-3 pl-0 pr-0 pr-sm-2 mt-3">
+                <span class="f-13 c-black helvetica-75 d-block mb-2">პროგრამა</span>
+                <div class="search-input-parent ">
+                    <input class="search-input w-100" type="text">
+                </div>
             </div>
+
             <div class="drop-parent col-12 col-sm-6 col-md-3 pr-md-2 pl-0 pr-0 mt-3">
-                <select class="drop w-100" name="" id="">
-                    <option value="">ნებისმიერი</option>
-                    <option value="">ნებისმიერი</option>
-                    <option value="">ნებისმიერი</option>
-                    <option value="">ნებისმიერი</option>
-                </select>
-            </div>
-            <div class="drop-parent col-12 col-sm-6 col-md-3 pl-md-2 pl-0 pr-0 pr-sm-2 mt-3">
-                <select class="drop w-100" name="" id="">
-                    <option value="">ნებისმიერი</option>
-                    <option value="">ნებისმიერი</option>
-                    <option value="">ნებისმიერი</option>
-                    <option value="">ნებისმიერი</option>
-                </select>
-            </div>
-            <div class="drop-parent col-12 col-sm-6 col-md-3 p-0 mt-3">
+                <span class="f-13 c-black helvetica-75 d-block mb-2">სკოლა</span>
                 <div class=" dropdown-toggle w-100 drop d-flex align-items-center justify-content-between" type="button"
                     id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     <span>
                         ნებისმიერი
                     </span>
                 </div>
-                <div class="dropdown-menu  mt-2 px-2" aria-labelledby="dropdownMenuButton">
+                <div class="dropdown-menu w-100 mt-2" aria-labelledby="dropdownMenuButton">
+                    <div class="blcok mt-2 pointer w-100">
+                        <p class="px-3 w-100 c-light-text hover-bc-gray transition bc-white py-2">
+                            ნებისმიერი
+                        </p>
+                    </div>
+                    <div class="blcok mt-2 pointer w-100">
+                        <p class="px-3 w-100 c-light-text hover-bc-gray transition bc-white py-2">
+                            ნებისმიერი
+                        </p>
+                    </div>
+                    <div class="blcok mt-2 pointer w-100">
+                        <p class="px-3 w-100 c-light-text hover-bc-gray transition bc-white py-2">
+                            ნებისმიერი
+                        </p>
+                    </div>
+                    <div class="blcok mt-2 pointer w-100">
+                        <p class="px-3 w-100 c-light-text hover-bc-gray transition bc-white py-2">
+                            ნებისმიერი
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="drop-parent col-12 col-sm-6 col-md-3 pl-md-2 pl-0 pr-0 pr-sm-2 mt-3">
+                <span class="f-13 c-black helvetica-75 d-block mb-2">დონე</span>
+
+                <div class=" dropdown-toggle w-100 drop d-flex align-items-center justify-content-between" type="button"
+                    id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span>
+                        ნებისმიერი
+                    </span>
+                </div>
+                <div class="dropdown-menu w-100 mt-2" aria-labelledby="dropdownMenuButton">
+                    <div class="blcok mt-2 pointer w-100">
+                        <p class="px-3 w-100 c-light-text hover-bc-gray transition bc-white py-2">
+                            ნებისმიერი
+                        </p>
+                    </div>
+                    <div class="blcok mt-2 pointer w-100">
+                        <p class="px-3 w-100 c-light-text hover-bc-gray transition bc-white py-2">
+                            ნებისმიერი
+                        </p>
+                    </div>
+                    <div class="blcok mt-2 pointer w-100">
+                        <p class="px-3 w-100 c-light-text hover-bc-gray transition bc-white py-2">
+                            ნებისმიერი
+                        </p>
+                    </div>
+                    <div class="blcok mt-2 pointer w-100">
+                        <p class="px-3 w-100 c-light-text hover-bc-gray transition bc-white py-2">
+                            ნებისმიერი
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="drop-parent col-12 col-sm-6 col-md-3 p-0 mt-3">
+                <span class="f-13 c-black helvetica-75 d-block mb-2">პროგრამა</span>
+
+                <div class=" dropdown-toggle w-100 drop d-flex align-items-center justify-content-between" type="button"
+                    id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span>
+                        ნებისმიერი
+                    </span>
+                </div>
+                <div class="dropdown-menu w-100 mt-2 px-2" aria-labelledby="dropdownMenuButton">
                     <div class="blcok mt-2">
                         <label class="cheks mb-0 d-flex align-items-center mt-3" for="isPoliticallyExposedPerson">
                             <span class="mr-2 pl-2 helvetica-55 f-14 c-light-text d-flex align-items-center">
