career and bug fix

--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -520,7 +520,7 @@
                 უახლოესი ინფორმაცია მასტერკლასებზე.</span>
             <div class="scroll-parent">
 
-                <div class="w-100 d-flex justify-content-between align-items-center scroll-child overflow-auto">
+                <div class="w-100 d-flex justify-content-between align-items-stretch scroll-child overflow-auto">
 
                     <div class="block mt-5 ml-0 ml-md-3 mr-2 br-8 overflow-hidden bc-white scroll-block">
                         <article class="article d-flex flex-column">
@@ -575,6 +575,9 @@
                                 გრაფიკ
                             </span>
                         </div>
+                    </div>
+                    <div class="block d-flex align-items-center justify-content-center d-md-none mt-5 ml-0 ml-md-3 mr-2 br-8 overflow-hidden bc-white scroll-block">
+                            <button class=" blue-button">see all</button>
                     </div>
                 </div>
             </div>
