--- a/test-scss/contact.html
+++ b/test-scss/contact.html
@@ -162,130 +162,77 @@
             </nav>
         </div>
     </section>
-    <div class="center py-4">
-        <button class="btn btn-light helvetica-55 f-16 d-flex align-items-center py-2"><img class="mr-2" src="./img/back.svg" alt=""> ukan</button>
-    </div>
-    <section class="details pb-5">
-        <div class="d-flex justify-content-between section flex-column flex-md-row-reverse align-items-start">
-            <div class="left__side d-flex flex-column align-items-center justify-content-center box-shadow col-md-4 col-lg-3 col-12 br-8 py-3">
-                <div class="d-flex mt-3 flex-wrap justify-content-between align-items-center w-100 py-1">
-                    <div class=" br-8 mt-2 bc-gray-light py-2 px-3 d-flex  align-items-center">
-                        <img class="mr-2" src="./img/wach.svg" alt="">
-                        <span class="f-14 c-light-text helvetica-55">Redberry</span>
+    <section class="m-h-def-2 py-5">
+        <div class="center d-flex align-items-stretch justify-content-between flex-column flex-md-row">
+            <div class="left__side col-12 col-md-6 col-lg-5 px-0 px-md-2">
+                <span class="f-28 lh-19 c-black helvetica-75 d-flex mb-3">მოგვწერეთ</span>
+                <span class="f-16 lh-24 c-light-text helvetica-55 d-flex mb-3">ციფრული ინდუსტრიის აკადემია ღიია ყველა დაინტერესებული პირისთვის; </span>
+                <div class="form pt-3">
+                    <div class="d-flex flex-wrap">
+                        <div class="col-lg-6 col-12 pl-0 pr-0 pr-lg-2 pl-lg-0">
+                            <label class="mb-2 helvetica-75 c-black f-16" for="id-1" >სახელი და გვარი</label class="mb-2 helvetica-75 c-black f-16">
+                            <input class="input w-100 bc-gray-light" id="id-1" type="text">
+                        </div>
+                        <div class="col-lg-6 col-12 pl-0 pl-lg-2 pr-0 pr-lg-0">
+                            <label class="mb-2 helvetica-75 c-black f-16" for="id-2s" >ელ-ფოსტა</label>
+                            <input class="input w-100 bc-gray-light" id="id-2s" type="text">
+                        </div>
                     </div>
-                    <div class=" br-8 mt-2 bc-gray-light py-2 px-3 d-flex  align-items-center">
-                        <img class="mr-2" src="./img/location.svg" alt="">
-                        <span class="f-14 c-light-text helvetica-55">Redberry</span>
+                    <div class="w-100 mt-4">
+                        <label class="mb-2 helvetica-75 c-black f-16" for="id-3" >წერილი</label>
+                        <textarea name="" id="id-3"class="w-100 border-1 br-c-border br-8 pl-3 pt-2 bc-gray-light" rows="10"></textarea>
                     </div>
-                    <div class=" br-8 mt-2 bc-gray-light py-2 px-3 d-flex  align-items-center">
-                        <img class="mr-2" src="./img/full.svg" alt="">
-                        <span class="f-14 c-light-text helvetica-55">Redberry</span>
-                    </div>
-                    <div class=" br-8 mt-2 bc-gray-light py-2 px-3 d-flex  align-items-center">
-                        <img class="mr-2" src="./img/wallet.svg" alt="">
-                        <span class="f-14 c-light-text helvetica-55">Redberry</span>
+                    <div class="mt-3">
+                        <button class="blue-button">გაგზავნა</button>
                     </div>
                 </div>
             </div>
-            <div class="right__side col-12 px-4 px-md-0 col-md-7 col-lg-8">
-                <div class="block pt-3 pb-3">
-                    <div class="d-flex mb-3 pb-1">
-                        <img src="./img/career.svg" alt="">
-                        <div class="d-flex flex-column pl-2">
-                            <span class="f-24 c-black helvetica-75 mb-2">სენიორ დეველოპერი</span>
-                            <span class="f-14 c-light-text helvetica-55">Redberry</span>
-                        </div>
-
+            <div class="right__side col-12 col-md-6 col-lg-5 px-0 px-md-2">
+                <span class="f-28 lh-19 c-black helvetica-75 d-flex mb-3">კონტაქტი</span>
+                <div class="info__blick br-8 bc-gray-light w-100 p-4">
+                    <div class="d-flex align-items-center mb-2 pb-1">
+                        <img class="mr-2" src="./img/phone.svg" alt="">
+                        <a href="javascript:vodi(0)" class="f-16 lh-24 c-light-text helvetica-55">+995 574 19 20 81</a>
                     </div>
-                    <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex mb-4">ჩვენ ვართ Redberry – ციფრული ტრანსფორმაციის სააგენტო და სტარტაპ სტუდია.</span>
-                    
-                    <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex mb-4">დიდ ქართულ და საერთაშორისო კომპანიებს ვეხმარებით ციფრულ ტრანსფორმაციაში. 
-                        მათთვის ვქმნით სხვადასხვა დანიშნულების საშუალო და დიდი ზომის ციფრულ 
-                        პროდუქტებს.</span>
-                    <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">ჩვენი სტარტაპ სტუდია კი ქმნის ბაზრისთვის ინოვაციური ბიზნეს მოდელის მქონე 
-                        ტექნოლოგიებზე დაფუძნებულ სტარტაპებს. აწვდის მათ როგორც seed დაფინანსებას, 
-                        ასევე ტექნიკურ, მარკეტინგულ, პროდუქტის დიზაინისა და ბიზნესის განვითარებისთვის 
-                        საჭირო ადამიანურ რესურსს.</span>
+                    <div class="d-flex align-items-center mb-2 pb-1">
+                        <img class="mr-2" src="./img/sms.svg" alt="">
+                        <a href="javascript:vodi(0)" class="f-16 lh-24 c-light-text helvetica-55">info@digitaledu.ge</a>
+                    </div>
+                    <div class="d-flex align-items-center mb-2 pb-1">
+                        <img class="mr-2" src="./img/location.svg" alt="">
+                        <span href="javascript:vodi(0)" class="f-16 lh-24 c-light-text helvetica-55">ი.ჭავჭავაძის 33ე თბილისი. საქართველო</span>
+                    </div>
                 </div>
-                <div class="block list__type pt-3 pb-3">
-                    <span class="f-16 c-black helvetica-75 mb-3 d-flex">ძირითადი მოვალეობები:</span>
-
-                    <ul>
-                        <li class="d-flex">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">Backend სერვისების იმპლემენტაცია;</span>
-                        </li>
-                        <li class="d-flex">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">კომპლექსურ არქიტექტურებთან მუშაობა;</span>
-                        </li>
-                        <li class="d-flex">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">Performance ოპტიმიზაციების გაკეთება;</span>
-                        </li>
-                        <li class="d-flex">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სხვადასხვა ფართოდ-გამოყენებადი სერვისების ინტეგრაცია;</span>
-                        </li>
-                        <li class="d-flex">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">ეფექტიანი, მრავალჯერ გამოყენებადი და დოკუმენტირებული კოდის წერა;</span>
-                        </li>
-                        <li class="d-flex">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">გუნდის წევრებთან ეფექტური კომუნიკაცია.</span>
-                        </li>
-                    </ul>
-                </div>
-                <div class="block list__type pt-3 pb-5">
-                    <span class="f-16 c-black helvetica-75 mb-3 d-flex">ძირითადი მოვალეობები:</span>
-
-                    <ul>
-                        <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">Backend სერვისების იმპლემენტაცია;</span>
-                        </li>
-                        <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">WEB ფრეიმვორქებთან მუშაობის გამოცდილება: Laravel, Symfony, Django, Flask</span>
-                        </li>
-                        <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">Git ვერსიის კონტროლის სისტემის გამოყენების ცოდნა</span>
-                        </li>
-                        <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">HTTP პროტოკოლის მუშაობის პრინციპები, სასურველია apache ან nginx-თან მუშაობის გამოცდილება</span>
-                        </li>
-                        <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სასურველია ტესტები წერის გამოცდილება. ტესტ ფრეიმვორქების ცოდნა: PHPUnit, unittest, pytest…</span>
-                        </li>
-                        <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სასურველია Github actions CI/CD ფაიფლაინთან მუშაობის გამოცდილება</span>
-                        </li>
-                        <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">HTTP პროტოკოლის მუშაობის პრინციპები, სასურველია apache ან nginx-თან მუშაობის გამოცდილება</span>
-                        </li>
-                        <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სასურველია ტესტები წერის გამოცდილება. ტესტ ფრეიმვორქების ცოდნა: PHPUnit, unittest, pytest…</span>
-                        </li>
-                        <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სასურველია Github actions CI/CD ფაიფლაინთან მუშაობის გამოცდილება</span>
-                        </li>
-                        <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex">HTTP პროტოკოლის მუშაობის პრინციპები, სასურველია apache ან nginx-თან მუშაობის გამოცდილება</span>
-                        </li>
-                        <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სასურველია ტესტები წერის გამოცდილება. ტესტ ფრეიმვორქების ცოდნა: PHPUnit, unittest, pytest…</span>
-                        </li>
-                        <li class="d-flex ">
-                            <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> სასურველია Github actions CI/CD ფაიფლაინთან მუშაობის გამოცდილება</span>
-                        </li>
-                    </ul>
-                </div>
-                <div class=" box-shadow w-100 d-flex p-3 br-8 flex-column flex-sm-row">
-                    <span class="f-16 lh-24 c-light-text helvetica-55 lh-24 d-flex"> To apply for this job email your details to</span> 
-                    <a class="f-16 lh-24 c-blue helvetica-55 lh-24 d-flex ml-0 ml-sm-1">hello@redberry.ge</a>
-
-                </div>
+                <div class="map mt-3 pt-2">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d11913.050445470044!2d44.71027846977538!3d41.71485175000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sge!4v1601318296055!5m2!1sen!2sge" width="100%" height="300px"></iframe>
             </div>
         </div>
     </section>
 
 
 
-
-
+<section class="pagination py-2">
+    <div class="center">
+        <nav aria-label="...">
+            <ul class="pagination d-flex justify-content-center">
+              <li class="page-item disabled">
+                <span class="page-link"> <img style="transform: rotate(90deg);" src="./img/path.svg" alt=""> </span>
+              </li>
+              <li class="page-item"><a class="page-link" href="#">1</a></li>
+              <li class="page-item active" aria-current="page">
+                <span class="page-link">
+                  2
+                  <span class="sr-only">(current)</span>
+                </span>
+              </li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item">
+                <a class="page-link" href="#"><img style="transform: rotate(270deg);" src="./img/path.svg" alt=""></a>
+              </li>
+            </ul>
+          </nav>
+    </div>
+</section>
 
 
 
