--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -798,29 +798,32 @@
                     <span class="c-black f-14 helvetica-75">გამოგვყევი</span>
                 </li>
                 <li class="list d-flex align-items-center mt-4">
-                    <a href="">
-                        <img class="" src="./img/be.svg" alt="">
+                    <a href="" class="hover-imgs">
+                        <img class="before" src="./img/social-icons/behance-1-gray.svg" alt="">
+                        <img class="after" src="./img/social-icons/behance-1.svg" alt="">
 
                     </a>
-                    <a href="">
-
-                        <img class="ml-2" src="./img/linkedin.svg" alt="">
+                    <a href="" class="hover-imgs">
+                        <img class="ml-2 before" src="./img/social-icons/linkedin-icon-gray.svg" alt="">
+                        <img class="ml-2 after" src="./img/social-icons/linkedin-icon.svg" alt="">
                     </a>
-                    <a href="">
-                        <img class="ml-2" src="./img/Group 768.svg" alt="">
+                    <a href="" class="hover-imgs">
+                        <img class="ml-2 before" src="./img/social-icons/instagram-2016=-gray.svg" alt="">
+                        <img class="ml-2 after" src="./img/social-icons/instagram-2016.svg" alt="">
 
-                    </a>
-                    <a href="">
-                        <img class="ml-2" src="./img/fb.svg" alt="">
 
                     </a>
-                    <a href="">
-
-                        <img class="ml-2" src="./img/twitter.svg" alt="">
+                    <a href="" class="hover-imgs">
+                        <img class="ml-2 before" src="./img/social-icons/Facebook_f_logo-gray.svg" alt="">
+                        <img class="ml-2 after" src="./img/social-icons/Facebook_f_logo.svg" alt="">
                     </a>
-                    <a href="">
-
-                        <img class="ml-2" src="./img/Subtraction.svg" alt="">
+                    <a href="" class="hover-imgs">
+                        <img class="ml-2 before" src="./img/social-icons/twitter-3-gray.svg" alt="">
+                        <img class="ml-2 after" src="./img/social-icons/twitter-3.svg" alt="">
+                    </a>
+                    <a href="" class="hover-imgs">
+                        <img class="ml-2 before" src="./img/social-icons/dribbble-icon-1-gray.svg" alt="">
+                        <img class="ml-2 after" src="./img/social-icons/dribbble-icon-1.svg" alt="">
                     </a>
                 </li>
             </ul>
@@ -876,29 +879,32 @@
         </div>
         <div id="accordionExample" class="mx-auto d-flex flex-column d-md-none up__side center">
             <li class="list d-flex align-items-center mt-4">
-                <a href="">
-                    <img class="" src="./img/be.svg" alt="">
+                <a href="" class="hover-imgs">
+                    <img class="before" src="./img/social-icons/behance-1-gray.svg" alt="">
+                    <img class="after" src="./img/social-icons/behance-1.svg" alt="">
 
                 </a>
-                <a href="">
-
-                    <img class="ml-2" src="./img/linkedin.svg" alt="">
+                <a href="" class="hover-imgs">
+                    <img class="ml-2 before" src="./img/social-icons/linkedin-icon-gray.svg" alt="">
+                    <img class="ml-2 after" src="./img/social-icons/linkedin-icon.svg" alt="">
                 </a>
-                <a href="">
-                    <img class="ml-2" src="./img/Group 768.svg" alt="">
+                <a href="" class="hover-imgs">
+                    <img class="ml-2 before" src="./img/social-icons/instagram-2016=-gray.svg" alt="">
+                    <img class="ml-2 after" src="./img/social-icons/instagram-2016.svg" alt="">
 
-                </a>
-                <a href="">
-                    <img class="ml-2" src="./img/fb.svg" alt="">
 
                 </a>
-                <a href="">
-
-                    <img class="ml-2" src="./img/twitter.svg" alt="">
+                <a href="" class="hover-imgs">
+                    <img class="ml-2 before" src="./img/social-icons/Facebook_f_logo-gray.svg" alt="">
+                    <img class="ml-2 after" src="./img/social-icons/Facebook_f_logo.svg" alt="">
                 </a>
-                <a href="">
-
-                    <img class="ml-2" src="./img/Subtraction.svg" alt="">
+                <a href="" class="hover-imgs">
+                    <img class="ml-2 before" src="./img/social-icons/twitter-3-gray.svg" alt="">
+                    <img class="ml-2 after" src="./img/social-icons/twitter-3.svg" alt="">
+                </a>
+                <a href="" class="hover-imgs">
+                    <img class="ml-2 before" src="./img/social-icons/dribbble-icon-1-gray.svg" alt="">
+                    <img class="ml-2 after" src="./img/social-icons/dribbble-icon-1.svg" alt="">
                 </a>
             </li>
             <div class="card">
