--- a/test-scss/index.html
+++ b/test-scss/index.html
@@ -638,7 +638,7 @@
             <div class="center">
                 <h1 class="f-30 mb-2 helvetica-75 text-center text-break c-black">ჩვენი კურსდამთავრებულები
                 </h1>
-                <p class="f-16 helvetica-55 text-center c-light-text">დაგვიტოვე შენი საკონტაქტო
+                <p class="f-16 helvetica-55 text-center c-card-text">დაგვიტოვე შენი საკონტაქტო
                     ინფორმაცია და მიიღე
                     უახლოესი ინფორმაცია მასტერკლასებზე.</p>
             </div>
