--- a/test-scss/search.html
+++ b/test-scss/search.html
@@ -150,16 +150,16 @@
         </h2>
     </section>
     <div class="filter__place center d-flex align-items-center  justify-content-center mt-3 overflow-hidden">
-        <div class="nav nav-tabs border-0 flex-nowrap d-flex position-relative overflow-auto pb-3 mb-n3 align-items-center" id="nav-tab" role="tablist">
+        <div class="nav nav-tabs border-0 flex-nowrap d-flex position-relative overflow-auto pb-3 mb-n3 align-items-center"
+            id="nav-tab" role="tablist">
             <a class="filter-a f-14 mb-3 c-light-text active show" active" id="nav-home-tab" data-toggle="tab"
                 href="#nav-home" role="tab" aria-controls="nav-home" aria-selected="true">ყველა</a>
-            <a class="filter-a f-14 mb-3 c-light-text" id="nav-profile-tab" data-toggle="tab" href="#nav-profile" role="tab"
-                aria-controls="nav-profile" aria-selected="false">მასტერკლასები</a>
-            <a class="filter-a f-14 mb-3 c-light-text" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab"
-                aria-controls="nav-contact" aria-selected="false">ბლოგი</a>
-            <a class="filter-a f-14 mb-3 c-light-text" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab"
-                aria-controls="nav-contact" aria-selected="false">შეთავაზებები</a>
-                <img  class="search-row position-absolute pointer" src="./img/back.svg" alt="">
+            <a class="filter-a f-14 mb-3 c-light-text" id="nav-profile-tab" data-toggle="tab" href="#nav-profile"
+                role="tab" aria-controls="nav-profile" aria-selected="false">მასტერკლასები</a>
+            <a class="filter-a f-14 mb-3 c-light-text" id="nav-contact-tab" data-toggle="tab" href="#nav-contact"
+                role="tab" aria-controls="nav-contact" aria-selected="false">ბლოგი</a>
+            <a class="filter-a f-14 mb-3 c-light-text" id="nav-contact-tab" data-toggle="tab" href="#nav-contact"
+                role="tab" aria-controls="nav-contact" aria-selected="false">შეთავაზებები</a>
         </div>
         <!-- <div class="drop-parent col-12 col-sm-6 col-md-3 mt-3 d-block d-md-none">
             <div class=" dropdown-toggle w-100 drop d-flex align-items-center justify-content-between" type="button"
@@ -186,49 +186,70 @@
 
 
     </div>
+    <section class="py-md-5 py-3 border-top">
 
-    <div class="center d-flex justify-content-between pt-5 flex-column-reverse flex-lg-row border-top pb-3">
-        <div class="left__Side d-flex justify-content-between align-items-center flex-column flex-md-row">
-            <div class="texts">
-                <h2 class="f-24 c-black helvetica-75 lh-35">კონტენტ მარკეტინგის პაკეტ</h2>
-                <span class="f-16 c-black lh-25 d-flex mt-4 helvetica-55">იდეა და ინსპირაცია იდეოლოგიური და სტრატეგიული განვითარება შემოქმედებითი პროცესის მენეჯმენტი გზა იდეიდან წარმატებამდე მარცხი-სწორად დაცემა ინდუსტრიის ტრენდები და დინამიკა ქეისები და მაგალითები22 ივლისი, 2019</span>
+        <div class="center d-flex justify-content-between py-5 flex-column-reverse flex-lg-row ">
+            <div class="left__Side d-flex justify-content-between align-items-center flex-column flex-md-row">
+                <div class="texts">
+                    <h2 class="f-24 c-black helvetica-75 lh-35">კონტენტ მარკეტინგის პაკეტ</h2>
+                    <span class="f-16 c-black lh-25 d-flex mt-4 helvetica-55">იდეა და ინსპირაცია იდეოლოგიური და
+                        სტრატეგიული
+                        განვითარება შემოქმედებითი პროცესის მენეჯმენტი გზა იდეიდან წარმატებამდე მარცხი-სწორად დაცემა
+                        ინდუსტრიის ტრენდები და დინამიკა ქეისები და მაგალითები22 ივლისი, 2019</span>
 
+                </div>
+            </div>
+            <div class="right__side mt-md-4 mb-3 col-md-3 col-lg-2 px-0 d-flex justify-content-lg-end justify-content-start ">
+                <div>
+                    <button class="btn btn-light">შეთავაზებები</button>
+                </div>
             </div>
         </div>
-        <div class="right__side mt-4 mb-3">
-            <button class="btn btn-light">შეთავაზებები</button>
-        </div>
-    </div>
-    <div class="center d-flex justify-content-between pt-5 flex-column-reverse flex-lg-row border-top pb-3">
-        <div class="left__Side d-flex justify-content-between align-items-center flex-column flex-md-row">
-            <div class="col-3 d-none d-md-flex pl-0">
-                <img class="w-100" src="./img/marketing.svg" alt="">
-            </div>
-            <div class="texts">
-                <h2 class="f-24 c-black helvetica-75 lh-35">კონტენტ მარკეტინგის პაკეტ</h2>
-                <span class="f-16 c-black lh-25 d-flex mt-4 helvetica-55">იდეა და ინსპირაცია იდეოლოგიური და სტრატეგიული განვითარება შემოქმედებითი პროცესის მენეჯმენტი გზა იდეიდან წარმატებამდე მარცხი-სწორად დაცემა ინდუსტრიის ტრენდები და დინამიკა ქეისები და მაგალითები22 ივლისი, 2019</span>
+    </section>
 
-            </div>
-        </div>
-        <div class="right__side mt-4 mb-3">
-            <button class="btn btn-light">შეთავაზებები</button>
-        </div>
-    </div>
-    <div class="center d-flex justify-content-between pt-5 flex-column-reverse flex-lg-row border-top pb-3">
-        <div class="left__Side d-flex justify-content-between align-items-center flex-column flex-md-row">
-            <div class="col-3 d-none d-md-flex pl-0">
-                <img class="w-100" src="./img/marketing.svg" alt="">
-            </div>
-            <div class="texts">
-                <h2 class="f-24 c-black helvetica-75 lh-35">კონტენტ მარკეტინგის პაკეტ</h2>
-                <span class="f-16 c-black lh-25 d-flex mt-4 helvetica-55">იდეა და ინსპირაცია იდეოლოგიური და სტრატეგიული განვითარება შემოქმედებითი პროცესის მენეჯმენტი გზა იდეიდან წარმატებამდე მარცხი-სწორად დაცემა ინდუსტრიის ტრენდები და დინამიკა ქეისები და მაგალითები22 ივლისი, 2019</span>
+    <section class="py-md-5 py-3 border-top">
+        <div class="center d-flex justify-content-between flex-column-reverse flex-lg-row">
+            <div class="left__Side pl-0 d-flex col-12 col-lg-10 justify-content-between align-items-center flex-column flex-md-row">
+                <div class="col-3 d-md-flex d-none pl-0 pr-5">
+                    <img class="w-100 mr-5" src="./img/marketing.svg" alt="">
+                </div>
+                <div class="texts w-100 pl-md-2">
+                    <h2 class="f-24 c-black helvetica-75 lh-35">კონტენტ მარკეტინგის პაკეტ</h2>
+                    <span class="f-16 c-black lh-25 d-flex mt-4 helvetica-55">იდეა და ინსპირაცია იდეოლოგიური და
+                        სტრატეგიული განვითარება შემოქმედებითი პროცესის მენეჯმენტი გზა იდეიდან წარმატებამდე მარცხი-სწორად
+                        დაცემა ინდუსტრიის ტრენდები და დინამიკა ქეისები და მაგალითები22 ივლისი, 2019</span>
 
+                </div>
+            </div>
+            <div class="right__side mt-md-4 mb-3 col-12 col-md-3 col-lg-2 px-0 d-flex justify-content-lg-end justify-content-start">
+                <div>
+                    <button class="btn btn-light">შეთავაზებები</button>
+                </div>
             </div>
         </div>
-        <div class="right__side mt-4 mb-3">
-            <button class="btn btn-light">შეთავაზებები</button>
+    </section>
+
+    <section class="py-md-5 py-3 mb-5 border-top">
+        <div class="center d-flex justify-content-between flex-column-reverse flex-lg-row">
+            <div class="left__Side pl-0 d-flex col-12 col-lg-10 justify-content-between align-items-center flex-column flex-md-row">
+                <div class="col-3 d-md-flex d-none pl-0 pr-5">
+                    <img class="w-100 mr-5" src="./img/marketing.svg" alt="">
+                </div>
+                <div class="texts w-100 pl-md-2">
+                    <h2 class="f-24 c-black helvetica-75 lh-35">კონტენტ მარკეტინგის პაკეტ</h2>
+                    <span class="f-16 c-black lh-25 d-flex mt-4 helvetica-55">იდეა და ინსპირაცია იდეოლოგიური და
+                        სტრატეგიული განვითარება შემოქმედებითი პროცესის მენეჯმენტი გზა იდეიდან წარმატებამდე მარცხი-სწორად
+                        დაცემა ინდუსტრიის ტრენდები და დინამიკა ქეისები და მაგალითები22 ივლისი, 2019</span>
+
+                </div>
+            </div>
+            <div class="right__side mt-md-4 mb-3 col-12 col-md-3 col-lg-2 px-0 d-flex justify-content-lg-end justify-content-start">
+                <div>
+                    <button class="btn btn-light">შეთავაზებები</button>
+                </div>
+            </div>
         </div>
-    </div>
+    </section>
 
 
 
