--- a/test-scss/contact.html
+++ b/test-scss/contact.html
@@ -162,12 +162,12 @@
             </nav>
         </div>
     </section>
-    <section class="m-h-def-2 py-5">
+    <section class="m-h-def-2 py-md-5 py-3">
         <div class="center d-flex align-items-stretch justify-content-between flex-column flex-md-row">
             <div class="left__side col-12 col-md-6 col-lg-5 px-0 px-md-2">
                 <span class="f-28 lh-19 c-black helvetica-75 d-flex mb-3">მოგვწერეთ</span>
                 <span class="f-16 lh-24 c-light-text helvetica-55 d-flex mb-3">ციფრული ინდუსტრიის აკადემია ღიია ყველა დაინტერესებული პირისთვის; </span>
-                <div class="form pt-3">
+                <div class="form pt-md-3 pt-1">
                     <div class="d-flex flex-wrap">
                         <div class="col-lg-6 col-12 pl-0 pr-0 pr-lg-2 pl-lg-0">
                             <label class="mb-2 helvetica-75 c-black f-16" for="id-1" >სახელი და გვარი</label class="mb-2 helvetica-75 c-black f-16">
@@ -182,23 +182,23 @@
                         <label class="mb-2 helvetica-75 c-black f-16" for="id-3" >წერილი</label>
                         <textarea name="" id="id-3"class="w-100 border-1 br-c-border br-8 pl-3 pt-2 bc-gray-light" rows="10"></textarea>
                     </div>
-                    <div class="mt-3">
+                    <div class="mt-md-3 mt-2">
                         <button class="blue-button">გაგზავნა</button>
                     </div>
                 </div>
             </div>
-            <div class="right__side col-12 col-md-6 col-lg-5 px-0 px-md-2">
+            <div class="right__side col-12 col-md-6 col-lg-5 px-0 px-md-2 mt-5 pt-2 mt-md-0 pt-md-0">
                 <span class="f-28 lh-19 c-black helvetica-75 d-flex mb-3">კონტაქტი</span>
                 <div class="info__blick br-8 bc-gray-light w-100 p-4">
-                    <div class="d-flex align-items-center mb-2 pb-1">
+                    <div class="d-flex align-items-start mb-2 pb-1">
                         <img class="mr-2" src="./img/phone.svg" alt="">
                         <a href="javascript:vodi(0)" class="f-16 lh-24 c-light-text helvetica-55">+995 574 19 20 81</a>
                     </div>
-                    <div class="d-flex align-items-center mb-2 pb-1">
+                    <div class="d-flex align-items-start mb-2 pb-1">
                         <img class="mr-2" src="./img/sms.svg" alt="">
                         <a href="javascript:vodi(0)" class="f-16 lh-24 c-light-text helvetica-55">info@digitaledu.ge</a>
                     </div>
-                    <div class="d-flex align-items-center mb-2 pb-1">
+                    <div class="d-flex align-items-start mb-2 pb-1">
                         <img class="mr-2" src="./img/location.svg" alt="">
                         <span href="javascript:vodi(0)" class="f-16 lh-24 c-light-text helvetica-55">ი.ჭავჭავაძის 33ე თბილისი. საქართველო</span>
                     </div>
