--- a/test-scss/contact.html
+++ b/test-scss/contact.html
@@ -142,21 +142,33 @@
             </div>
         </div>
     </header>
-    <section class="mini__header border-bottom d-none d-md-flex">
-        <div class="center">
-            <nav style="height: 60px;" class="nav-header">
+    <section class="mini__header border-bottom d-md-flex">
+        <div class="d-flex justify-content-center w-100">
+            <nav class="nav-header overflow-auto">
                 <ul class="d-flex align-items-center">
                     <li class="list mr-4 d-flex align-items-center">
-                        <a style="height: 60px;" href=""
-                            class="nav__a c-light-text c-hover-blue transition helvetica-75">პაკეტები</a>
+                        <a href=""
+                            class="nav__a c-light-text c-hover-blue transition helvetica-75 keep-all">პაკეტები</a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
-                        <a style="height: 60px;" href=""
-                            class="nav__a c-light-text c-hover-blue transition helvetica-75">ფასდაკლებები</a>
+                        <a href=""
+                            class="nav__a c-light-text c-hover-blue transition helvetica-75 keep-all">ფასდაკლებები</a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
-                        <a style="height: 60px;" href=""
-                            class="nav__a c-light-text c-hover-blue transition helvetica-75">კონკუსრები</a>
+                        <a href=""
+                            class="nav__a c-light-text c-hover-blue transition helvetica-75 keep-all">კონკუსრები</a>
+                    </li>
+                    <li class="list mr-4 d-flex align-items-center">
+                        <a href=""
+                            class="nav__a c-light-text c-hover-blue transition helvetica-75 keep-all">კონკუსრები</a>
+                    </li>
+                    <li class="list mr-4 d-flex align-items-center">
+                        <a href=""
+                            class="nav__a c-light-text c-hover-blue transition helvetica-75 keep-all">კონკუსრები</a>
+                    </li>
+                    <li class="list mr-4 d-flex align-items-center">
+                        <a href=""
+                            class="nav__a c-light-text c-hover-blue transition helvetica-75 keep-all">კონკუსრები</a>
                     </li>
                 </ul>
             </nav>
