--- a/test-scss/courses_2.html
+++ b/test-scss/courses_2.html
@@ -257,7 +257,7 @@
             </div>
         </div>
     </section>
-    <section class="teams__section pt-5 pb-5">
+    <section class="teams__section py-md-5 py-3 ">
         <div class="center">
             <div class="row">
 
@@ -274,7 +274,7 @@
                             2</a>
                     </li>
                 </ul>
-                <div class="drop-parent col-12 col-sm-6 col-md-3 mt-3 pb-4 px-0 d-block d-md-none">
+                <div class="drop-parent border  br-8 col-12 col-sm-6 col-md-3 mt-3 mb-0 mb-md-4 px-0 d-block d-md-none">
                     <div class=" dropdown-toggle w-100 drop d-flex align-items-center justify-content-between"
                         type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
@@ -398,7 +398,7 @@
                         <img class="w-100" src="./img/Artboard-1.png" alt="">
                     </div>
                 </div>
-                <div class="right__side col-12 col-lg-5">
+                <div class="right__side col-12 col-lg-5 px-0">
                     <span class="mr-2 pl-2 helvetica-75 d-inline-block mb-3 f-30 c-black">გრაფიკული დიზაინის კურსის
                         აღწერა</span>
                     <span class="mr-2 pl-2 helvetica-55 d-inline-block mb-3 lh-24 f-16 c-light-text">კურსი მოიცავს იმ
@@ -425,7 +425,7 @@
             <div class="scroll-parent">
 
                 <div class="w-100 d-flex justify-content-between align-items-center scroll-child overflow-auto">
-                    <div class="block flex-column flex-lg-row col-6 d-flex pl-0 pr-3 br-8 ">
+                    <div class="block flex-column flex-lg-row col-6 d-flex scroll-block pl-0 pr-3 br-8 ">
                         <div class="left__side d-flex align-items-end bc-purple br-tl br-bl col-12 col-lg-5 p-0">
                             <div class="img-block d-flex align-items-end w-100">
                                 <img class="w-100" src="./img/face.svg" alt="">
@@ -488,13 +488,13 @@
 
     </section>
 
-    <section class="silabus__section py-5">
-        <h1 class="f-30 mb-5 helvetica-75 c-black text-center">კითხვა/პასუხი</h1>
+    <section class="silabus__section py-md-5 py-4">
+        <h1 class="f-30 mb-md-5 mb-4 helvetica-75 c-black text-center">კითხვა/პასუხი</h1>
         <div class="position-relative">
             <div class="accordion center d-flex align-items-stretch align-items-md-center flex-row flex-md-column"
                 id="accordionExample">
 
-                <div class="col-12 silas col-md-8">
+                <div class="col-12 silas col-md-8 mb-4 mb-md-0">
                     <div class="card-header border-top border-bottom-0 bc-white px-0" id="headingOne_2">
                         <h2 class="mb-0">
                             <a class="align-items-center btn c-black d-flex f-16 helvetica-75 px-0 justify-content-between text-left w-100"
@@ -534,7 +534,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 silas col-md-8">
+                <div class="col-12 silas col-md-8 mb-4 mb-md-0">
                     <div class="card-header border-top border-bottom-0 bc-white px-0" id="headingOne_3">
                         <h2 class="mb-0">
                             <a class="align-items-center btn c-black d-flex f-16 helvetica-75 px-0 justify-content-between text-left w-100"
@@ -574,7 +574,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 silas col-md-8">
+                <div class="col-12 silas col-md-8 mb-4 mb-md-0">
                     <div class="card-header border-top border-bottom-0 bc-white px-0" id="headingOne_4">
                         <h2 class="mb-0">
                             <a class="align-items-center btn c-black d-flex f-16 helvetica-75 px-0 justify-content-between text-left w-100"
@@ -614,7 +614,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 silas col-md-8">
+                <div class="col-12 silas col-md-8 mb-4 mb-md-0">
                     <div class="card-header border-top border-bottom-0 bc-white px-0" id="headingOne_5">
                         <h2 class="mb-0">
                             <a class="align-items-center btn c-black d-flex f-16 helvetica-75 px-0 justify-content-between text-left w-100"
@@ -654,7 +654,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 silas col-md-8">
+                <div class="col-12 silas col-md-8 mb-4 mb-md-0">
                     <div class="card-header border-top border-bottom-0 bc-white px-0" id="headingOne_6">
                         <h2 class="mb-0">
                             <a class="align-items-center btn c-black d-flex f-16 helvetica-75 px-0 justify-content-between text-left w-100"
@@ -694,7 +694,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 silas col-md-8">
+                <div class="col-12 silas col-md-8 mb-4 mb-md-0">
                     <div class="card-header border-top border-bottom-0 bc-white px-0" id="headingOne_7">
                         <h2 class="mb-0">
                             <a class="align-items-center btn c-black d-flex f-16 helvetica-75 px-0 justify-content-between text-left w-100"
@@ -734,7 +734,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 silas col-md-8">
+                <div class="col-12 silas col-md-8 mb-4 mb-md-0">
                     <div class="card-header border-top border-bottom-0 bc-white px-0" id="headingOne_8">
                         <h2 class="mb-0">
                             <a class="align-items-center btn c-black d-flex f-16 helvetica-75 px-0 justify-content-between text-left w-100"
@@ -774,7 +774,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 silas col-md-8">
+                <div class="col-12 silas col-md-8 mb-4 mb-md-0">
                     <div class="card-header border-top border-bottom-0 bc-white px-0" id="headingOne_9">
                         <h2 class="mb-0">
                             <a class="align-items-center btn c-black d-flex f-16 helvetica-75 px-0 justify-content-between text-left w-100"
@@ -814,7 +814,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 silas col-md-8">
+                <div class="col-12 silas col-md-8 mb-4 mb-md-0">
                     <div class="card-header border-top border-bottom-0 bc-white px-0" id="headingOne_10">
                         <h2 class="mb-0">
                             <a class="align-items-center btn c-black d-flex f-16 helvetica-75 px-0 justify-content-between text-left w-100"
@@ -854,7 +854,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 silas col-md-8">
+                <div class="col-12 silas col-md-8 mb-4 mb-md-0">
                     <div class="card-header border-top border-bottom-0 bc-white px-0" id="headingOne_11">
                         <h2 class="mb-0">
                             <a class="align-items-center btn c-black d-flex f-16 helvetica-75 px-0 justify-content-between text-left w-100"
@@ -894,7 +894,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 silas col-md-8">
+                <div class="col-12 silas col-md-8 mb-4 mb-md-0">
                     <div class="card-header border-top border-bottom-0 bc-white px-0" id="headingOne_12">
                         <h2 class="mb-0">
                             <a class="align-items-center btn c-black d-flex f-16 helvetica-75 px-0 justify-content-between text-left w-100"
@@ -934,7 +934,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 silas col-md-8">
+                <div class="col-12 silas col-md-8 mb-4 mb-md-0">
                     <div class="card-header border-top border-bottom-0 bc-white px-0" id="headingOne_13">
                         <h2 class="mb-0">
                             <a class="align-items-center btn c-black d-flex f-16 helvetica-75 px-0 justify-content-between text-left w-100"
@@ -987,7 +987,7 @@
             <div class="row d-flex flex-column pb-5">
                 <h1 class="text-center f-30 mb-3 helvetica-75 c-black">შეთავაზება</h1>
                 <span class="text-center f-16 helvetica-55 c-light-text">არ გამოტოვო საუკეთესო შეთავაზებები!</span>
-                <div class="offers__block d-flex flex-column align-items-center mt-3">
+                <div class="offers__block d-flex flex-column align-items-center mt-md-3">
                     <div class="block d-flex align-items-center justify-content-between bc-white mt-4 br-8 p-4">
                         <div class="left d-flex flex-column">
                             <span class=" f-24 helvetica-75 c-black">აგრაფიკული დიზაინი</span>
@@ -1045,13 +1045,15 @@
         <div class="bdr">
 
             <div class="scroll-center d-flex flex-column align-items-center">
-                <h1 class="f-30 mb-2 helvetica-75 c-black">სტუდენტები კურსის შესახებ</h1>
-                <span class="f-16 helvetica-55 c-light-text">ნახე ჩვენი ვიდეოები გრაფიკული დიზაინის კურსზე</span>
+                <div class="d-flex flex-column mt-4">
+                    <h1 class="f-30 mb-2 helvetica-75 c-black">სტუდენტები კურსის შესახებ</h1>
+                    <span class="f-16 helvetica-55 c-light-text">ნახე ჩვენი ვიდეოები გრაფიკული დიზაინის კურსზე</span>
+                </div>
                 <div class="w-100 position-relative">
 
                     <div class="scroll-parent">
 
-                        <div class="mt-5 px-0 px-md-3 scroll-child w-100 course-block overflow-auto course_2-block">
+                        <div class="mt-md-5 px-0 px-md-3 scroll-child w-100 course-block overflow-auto course_2-block">
                             <div class="block py-3 px-4 coure_2 scroll-block d-flex align-items-end">
                                 <p class="f-16 helvetica-55 c-white">ჩვენი სტუდენტები: ლანა ჯოხაძე</p>
 
@@ -1076,15 +1078,16 @@
 
     <section class="student__works bc-banner">
         <div class="scroll-center d-flex flex-column align-items-center">
-
-            <h1 class="f-30 mb-2 helvetica-75 c-black">სტუდენტების ნამუშევრები</h1>
-            <span class="f-16 helvetica-55 c-light-text">დაგვიტოვე შენი საკონტაქტო ინფორმაცია და მიიღე
-                უახლოესი ინფორმაცია მასტერკლასებზე.</span>
+            <div class="d-flex flex-column mt-4">
+                <h1 class="f-30 mb-2 helvetica-75 text-center c-black">სტუდენტების ნამუშევრები</h1>
+                <span class="f-16 helvetica-55 text-center c-light-text">დაგვიტოვე შენი საკონტაქტო ინფორმაცია და მიიღე
+                    უახლოესი ინფორმაცია მასტერკლასებზე.</span>
+                </div>
             <div class="scroll-parent">
 
                 <div class="w-100 d-flex justify-content-between align-items-center scroll-child overflow-auto">
 
-                    <div class="block mt-5 ml-0 ml-md-3 mr-2 br-8 overflow-hidden bc-white scroll-block">
+                    <div class="block mt-md-5 ml-0 ml-md-3 mr-2 br-8 overflow-hidden bc-white scroll-block">
                         <article class="article d-flex flex-column">
                             <img class="w-100" src="./img/Group 804.svg" alt="">
                             <span class="f-16 px-3 c-black helvetica-75 d-block mt-3">Ryuichi Sakamoto & David
@@ -1099,7 +1102,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="block mt-5 ml-0 ml-md-3 mr-2 br-8 overflow-hidden bc-white scroll-block">
+                    <div class="block mt-md-5 ml-0 ml-md-3 mr-2 br-8 overflow-hidden bc-white scroll-block">
                         <article class="article d-flex flex-column">
                             <img class="w-100" src="./img/Group 804.svg" alt="">
                             <span class="f-16 px-3 c-black helvetica-75 d-block mt-3">Ryuichi Sakamoto & David
@@ -1114,7 +1117,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="block mt-5 ml-0 ml-md-3 mr-2 br-8 overflow-hidden bc-white scroll-block">
+                    <div class="block mt-md-5 ml-0 ml-md-3 mr-2 br-8 overflow-hidden bc-white scroll-block">
                         <article class="article d-flex flex-column">
                             <img class="w-100" src="./img/Group 804.svg" alt="">
                             <span class="f-16 px-3 c-black helvetica-75 d-block mt-3">Ryuichi Sakamoto & David
@@ -1132,7 +1135,7 @@
                 </div>
             </div>
 
-            <div>
+            <div class="d-md-flex d-none w-100 justify-content-center">
                 <button class=" helvetica-75 mt-5 blue-button">ნამუშევარი</button>
 
             </div>
