--- a/test-scss/career.html
+++ b/test-scss/career.html
@@ -142,21 +142,33 @@
             </div>
         </div>
     </header>
-    <section class="mini__header border-bottom d-none d-md-flex">
-        <div class="center">
-            <nav style="height: 60px;" class="nav-header">
+    <section class="mini__header border-bottom d-md-flex">
+        <div class="d-flex justify-content-center w-100">
+            <nav class="nav-header overflow-auto">
                 <ul class="d-flex align-items-center">
                     <li class="list mr-4 d-flex align-items-center">
-                        <a style="height: 60px;" href=""
-                            class="nav__a c-light-text c-hover-blue transition helvetica-75">პაკეტები</a>
+                        <a href=""
+                            class="nav__a c-light-text c-hover-blue transition helvetica-75 keep-all">პაკეტები</a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
-                        <a style="height: 60px;" href=""
-                            class="nav__a c-light-text c-hover-blue transition helvetica-75">ფასდაკლებები</a>
+                        <a href=""
+                            class="nav__a c-light-text c-hover-blue transition helvetica-75 keep-all">ფასდაკლებები</a>
                     </li>
                     <li class="list mr-4 d-flex align-items-center">
-                        <a style="height: 60px;" href=""
-                            class="nav__a c-light-text c-hover-blue transition helvetica-75">კონკუსრები</a>
+                        <a href=""
+                            class="nav__a c-light-text c-hover-blue transition helvetica-75 keep-all">კონკუსრები</a>
+                    </li>
+                    <li class="list mr-4 d-flex align-items-center">
+                        <a href=""
+                            class="nav__a c-light-text c-hover-blue transition helvetica-75 keep-all">კონკუსრები</a>
+                    </li>
+                    <li class="list mr-4 d-flex align-items-center">
+                        <a href=""
+                            class="nav__a c-light-text c-hover-blue transition helvetica-75 keep-all">კონკუსრები</a>
+                    </li>
+                    <li class="list mr-4 d-flex align-items-center">
+                        <a href=""
+                            class="nav__a c-light-text c-hover-blue transition helvetica-75 keep-all">კონკუსრები</a>
                     </li>
                 </ul>
             </nav>
@@ -164,9 +176,9 @@
     </section>
     <section class="border-bottom py-2">
         <div class="center">
-            <div class="d-flex justify-content-center flex-wrap">
-                <div class="block d-flex flex-column py-5 col-12 col-md-3">
-                    <h1 class="f-20 mt-4 c-black helvetica-75 text-center mb-2">კარიერა</h1>
+            <div class="d-flex justify-content-center flex-wrap py-3 py-md-0">
+                <div class="block d-flex flex-column py-md-5 col-12 col-md-3">
+                    <h1 class="f-20 mt-md-4 c-black helvetica-75 text-center mb-2">კარიერა</h1>
                     <span class="f-14 c-light-text helvetica-55 text-center">იპოვე შენთვის სასურველი ვაკანსია და
                         დასაქმდი, დასაქმდი </span>
                 </div>
@@ -175,7 +187,7 @@
 
         </div>
     </section>
-    <section class="details py-5">
+    <section class="details py-md-5 py-3">
         <div class="d-flex justify-content-between section flex-column flex-md-row align-items-start">
             <div class="left__side d-none d-md-flex flex-column  col-md-3 col-12 br-8 bc-gray-light py-3">
                 <div>
@@ -228,9 +240,9 @@
                 <div class="w-100 d-flex justify-content-end px-4">
                     <a type="button" class="filter-drop c-black" data-toggle="collapse" data-target="#demo">ფილტრები</a>
                 </div>
-                <div class="d-flex filter__block flex-column p-4  bc-gray-light collapse mt-3" id="demo">
-                    <div>
-                        <span class="f-13 c-black helvetica-75 d-block mb-2 py-3 br-8">ძიება</span>
+                <div class="d-flex filter__block flex-column px-4 bc-gray-light collapse mt-3" id="demo">
+                    <div class="pt-4">
+                        <span class="f-13 c-black helvetica-75 d-block mb-2 py-md-3 br-8">ძიება</span>
                         <div class="search-input-parent ">
                             <input class="search-input border-0 w-100 bc-white" type="text">
                         </div>
@@ -243,6 +255,7 @@
                             <span class="py-1">
                                 ნებისმიერი
                             </span>
+                            <img src="./img/Path.svg" alt="">
                         </div>
                         <div class="dropdown-menu col-10 mt-2" aria-labelledby="dropdownMenuButton">
                             <div class="blcok mt-2 pointer w-100">
@@ -268,7 +281,7 @@
                         </div>
                     </div>
                     <div>
-                        <div class="mt-3">
+                        <div class="mt-3 pb-4">
                             <span class="f-13 c-black helvetica-75 d-block mb-2">ადგილი</span>
     
                             <input class="input w-100 border-0" type="text" placeholder="შეიყვანე ადგილი...">
@@ -277,7 +290,7 @@
                 </div>
             </div>
             <div class="right__side col-12 px-4 px-md-0 col-md-8">
-                <div class="block border-bottom pt-3 pb-5">
+                <div class="block border-bottom pt-3 pb-md-5 pb-3">
                     <div class="d-flex mb-3 pb-1">
                         <img src="./img/career.svg" alt="">
                         <div class="d-flex flex-column pl-2">
@@ -304,7 +317,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="block border-bottom pt-3 pb-5">
+                <div class="block border-bottom pt-3 pb-md-5 pb-3">
                     <div class="d-flex mb-3 pb-1">
                         <div class="d-flex flex-column pl-2">
                             <span class="f-24 c-black helvetica-75 mb-2">სენიორ დეველოპერი</span>
